fix: table text color for dark mode change: table-collapse attribute

--- a/iaroapp/static/softTheme/css/soft-ui-dashboard.css
+++ b/iaroapp/static/softTheme/css/soft-ui-dashboard.css
@@ -1627,7 +1627,6 @@ progress {
   --bs-table-hover-bg: rgba(0, 0, 0, 0.075);
   width: 100%;
   margin-bottom: 1rem;
-  color: var(--bs-table-color);
   vertical-align: top;
   border-color: var(--bs-table-border-color); }
   .table > :not(caption) > * > * {
